Enhance wheel odometry with wheel angle support
- Add wheel_angles field to WheelEncoderData class
- Update rosbag reader to extract wheel angle data from wheel_angle_report
- Implement advanced Ackermann model using wheel angle data
- Add automatic model selection based on available data
- Update tests to work with wheel angle data
- Update documentation to reflect wheel angle support

--- a/tasks/T1.3.3_Parse_Wheel_Encoder_Messages.md
+++ b/tasks/T1.3.3_Parse_Wheel_Encoder_Messages.md
@@ -12,6 +12,7 @@ Implement functionality to parse wheel encoder data from ROS bag files. The syst
 ## Acceptance Criteria
 - [x] Support parsing of custom WheelReport messages with wheel position data
 - [x] Support parsing of custom WheelReport messages with wheel speed data
+- [x] Support parsing of custom WheelReport messages with wheel angle data
 - [x] Support parsing of standard ROS Odometry messages
 - [x] Support parsing of TwistStamped messages
 - [x] Convert all message types to a standardized WheelEncoderData structure
@@ -31,6 +32,7 @@ The implementation should:
 The WheelEncoderData class should store:
 - Timestamp (in seconds)
 - Wheel speeds or positions for all four wheels [front-left, front-right, rear-left, rear-right]
+- Wheel angles for all four wheels [front-left, front-right, rear-left, rear-right] (optional)
 
 ## Dependencies
 - Data structures module (WheelEncoderData class)
