--- a/tasks/T2.1_Implement_Wheel_Odometry.md
+++ b/tasks/T2.1_Implement_Wheel_Odometry.md
@@ -13,8 +13,10 @@ Implement a module to calculate vehicle motion (position and orientation changes
 - [x] Implement a WheelOdometry class to encapsulate wheel odometry calculations
 - [x] Support differential drive vehicle model
 - [x] Support Ackermann steering vehicle model
+- [x] Support advanced Ackermann model using wheel angle data
 - [x] Handle wheel speed data (meters per second)
 - [x] Handle wheel position data (encoder ticks)
+- [x] Handle wheel angle data (radians)
 - [x] Implement conversion from wheel speeds to vehicle motion (dx, dy, dtheta)
 - [x] Implement pose integration to update vehicle pose based on wheel odometry
 - [x] Handle edge cases (zero time difference, invalid data)
@@ -27,6 +29,7 @@ The implementation should:
 3. Implement methods for different vehicle models:
    - Differential drive: Calculate motion based on left/right wheel speeds
    - Ackermann steering: Calculate motion based on wheel speeds and steering angle
+   - Advanced Ackermann: Calculate motion based on wheel speeds and wheel angles
 4. Implement a pose integration method to update the vehicle pose based on calculated motion
 5. Handle edge cases such as zero time difference, invalid data, or encoder wrap-around
 
